--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Veries Seals III",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
