--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
+    "history": "^5.3.0",
     "mysql2": "^3.2.3",
+    "navigate": "^0.3.6",
     "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
